config/ipman-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipman-controller-service
  namespace: ims
spec:
  selector: 
    ipserviced: "true"
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
