config/webhook_service.yaml

apiVersion: v1
kind: Service
metadata:
  name: ipman-webhook-service
  namespace: ims
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/name: ipman
    control-plane: controller-manager
