config/validating_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: ipman-validating-webhook
webhooks:
- name: webhook.ipman.dialo.ai
  # failurePolicy: Fail
  admissionReviewVersions: ["v1"]
  sideEffects: None
  clientConfig:
    # base64 -w 0 tls.crt 
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvRENDQWVTZ0F3SUJBZ0lVUVJyNE90dnlKV1lqK1ZVNUtQZ211RWJ5NEZJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF4TUxSR2xoYkc4dVlXa2dRMEV3SGhjTk1qVXdOVEE0TVRReU5EQXdXaGNOTWpZdwpOVEE0TVRReU5EQXdXakFXTVJRd0VnWURWUVFERXd0RWFXRnNieTVoYVNCRFFUQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNdUsvVHNicHZ2Tzg4bFFtRTZ4RVJOWVZNcDRBTnh0VldYR0xxN0UKanMrc0VxdGxpYW9WaUxyL0hpVE1mcjVpTWNUR0piU0VwcS9pVXJrTDdjTmxvTUFqdWRkb2dQY3NwM3ExUHFIaQptdkZOc2VUL0JLY2 [...]
    service:
      namespace: ims
      name: ipman-webhook-service
      path: /validating
      port:  443
  # this is here to prevent a deadlock
  # since the webhook server is itself
  # a pod, without it it would try to
  # call itself on creation.
  objectSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: NotIn
        values:
          - ipman
      - key: control-plane
        operator: NotIn
        values:
          - controller-manager
  rules:
  - operations: ["CREATE", "DELETE", "UPDATE"]
    apiGroups: ["ipman.dialo.ai"]
    apiVersions: ["v1"]
    resources: ["ipmen"]

  - operations: ["CREATE", "DELETE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
